[workspace]
resolver = "2"
members = [
    "00_hello_world/hello_cargo",
    "01_basics/00_condition",
    "01_basics/01_loop",
    "01_basics/02_array",
    "01_basics/03_links",
    "01_basics/04_user_types",
    "01_basics/05_type_unpacking",
    "02_basics_level2/01_if_let",
    "02_basics_level2/02_methods",
    "02_basics_level2/03_generics",
    "02_basics_level2/04_std_types",
    "02_basics_level2/05_std_traits",
    "03_memory_level3/01_clone_drop",
    "03_memory_level3/02_box",
    "05_algorithms/01_probabilistic",
    "05_algorithms/02_range_minimum_query",
    "06_tiny_stuff/01_programmable_calculator",
    "06_tiny_stuff/02_get_ints_stdin",
]
