[workspace]
resolver = "2"
members = [
    "00_hello_world/hello_cargo",
    "01_basics/00_condition",
    "01_basics/01_loop",
    "01_basics/02_array",
    "01_basics/03_links",
    "01_basics/04_user_types",
    "01_basics/05_type_unpacking",
    "01_basics/06_tests",
    "02_basics_level2/01_if_let",
    "02_basics_level2/02_methods",
    "02_basics_level2/03_generics",
    "02_basics_level2/04_std_types",
    "02_basics_level2/05_std_traits",
    "02_basics_level2/06_iterators",
    "03_memory_level3/01_clone_drop",
    "03_memory_level3/02_box",
    "03_memory_level3/03_lifetime",
    "03_memory_level3/04_errors",
    "03_memory_level3/06_cells",
    "03_memory_level3/07_rc",
    "03_memory_level3/08_slice",
    "04_parallel_level4/01_threads",
    "04_parallel_level4/02_async",
    "04_parallel_level4/03_async2",
    "04_parallel_level4/04_dining_philosophers",
    "04_parallel_level4/05_chat",
    "05_algorithms/01_probabilistic",
    "05_algorithms/02_range_minimum_query",
    "06_tiny_stuff/01_programmable_calculator",
    "06_tiny_stuff/02_get_ints_stdin",
    "06_tiny_stuff/03_check_links",
    "06_tiny_stuff/04_change_map_values",
    "06_tiny_stuff/05_ray_tracing",
    "06_tiny_stuff/06_std_types",
    "08_unsafe_rust/01_simple",
    "08_unsafe_rust/02_ffi_filesystem",
    "09_macro/01_simple",
    "09_macro/02_proc_macro",
    "10_patterns/01_behavioural",
    "10_patterns/02_creational",
]
