[package]
name = "dining_philosophers"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dining_philosophers"
path = "dining_philosophers.rs"

[[bin]]
name = "dining_philosophers_async"
path = "dining_philosophers_async.rs"

[dependencies]
async-trait = "0.1.80"
futures = "0.3"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }