[package]
name = "cook_dev_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cook_logs"
path = "logs.rs"

[[bin]]
name = "cook_mod_logs"
path = "mod_logs.rs"

[[bin]]
name = "versioning"
path = "versioning.rs"

[dependencies]
chrono = { version = "0.4.41", optional = true }
env_logger = "0.11.8"
log = "0.4.27"
log4rs = { version = "1.3.0", optional = true }
semver = "1.0.26"
syslog = { version = "7.0.0", optional = true }

[features]
default = ["simple"]
# RUST_LOG=debug cargo run --bin cook_logs
simple = []
# cargo run --bin cook_logs --no-default-features --features to_stdout
to_stdout = []
custom = []
# journalctl | grep "cook_logs"
to_syslog = ["syslog"]
timestamps = ["chrono"]
to_file = ["log4rs"]

