[package]
name = "cook_encoding"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cook_char_set"
path = "char_set.rs"

[[bin]]
name = "cook_csv"
path = "csv.rs"

[[bin]]
name = "cook_structured_data"
path = "structured_data.rs"

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
csv = "1.3.1"
data-encoding = "2.9.0"
percent-encoding = "2.3.1"
serde = {version="1.0.219", features=["serde_derive"]}
serde_json = "1.0.140"
toml = "0.8.23"
url = "2.5.4"
