[package]
name = "cook_science"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cook_la"
path = "la.rs"

[[bin]]
name = "cook_trigonometry"
path = "trigonometry.rs"

[[bin]]
name = "cook_complex"
path = "complex.rs"

[[bin]]
name = "cook_statistics"
path = "statistics.rs"

[[bin]]
name = "cook_big_int"
path = "big_int.rs"

[dependencies]
approx = "0.5.1"
nalgebra = {version="0.33.2", features = ["serde-serialize"] }
ndarray = {version = "0.16.1", features = ["approx"] }
num = "0.4.3"
serde_json = "1.0.140"
