[package]
name = "cook_web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cook_extract_links"
path = "extract_links.rs"

[[bin]]
name = "cook_url"
path = "url.rs"

[[bin]]
name = "cook_mime"
path = "mime.rs"

[[bin]]
name = "cook_requests"
path = "requests.rs"

[[bin]]
name = "cook_auth"
path = "auth.rs"

[[bin]]
name = "cook_webapi"
path = "webapi.rs"

[[bin]]
name = "cook_downloads"
path = "downloads.rs"

[dependencies]
mime = "0.3.17"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
select = "0.6.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.4"
serde = {version="1.0.219", features=["serde_derive"]}
serde_json = "1.0.140"
tempfile = "3.20.0"
