[package]
name = "elk"
version = "0.1.0"
edition = "2024"

[dependencies]
delf = { path = "../delf" }
derive_more = { version = "2.1.0", features = ["debug"] }
mmap = "0.1.1"
region = "3.0.2"
thiserror = "2.0.17"
enumflags2 = "0.7.12"
multimap = "0.10.1"
clap = { version = "4.5.38", features = ["derive"] }
nom = "8.0.0"

[[bin]]
name = "elk"
path = "src/main.rs"